--- a/contact.css
+++ b/contact.css
@@ -1,286 +1,281 @@
 /* Feuille de style de contact.html */
 
 /* Importation d'une font */
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Lobster&family=Roboto+Condensed:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Lobster&family=Roboto+Condensed:wght@300&display=swap");
 
 /* Reset du BODY */
 
 body {
-    margin: 0px;
-    padding: 0px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 0px;
+  padding: 0px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-
-
 
 /* Gestion de la SECTION contenant le formulaire méthode 1*/
 
 .container {
-    max-width: 500px;
-    margin: auto;
-    margin-top: 100px;
-    margin-bottom: 20px; /* Pour mettre de l'espace entre deux éléments */
-    text-align: center;
-    border-radius: 20px;
-    padding: 40px;
-    color: #fff;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 20px; /* Pour mettre de l'espace entre deux éléments */
+  text-align: center;
+  border-radius: 20px;
+  padding: 40px;
+  color: #fff;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
 
 form {
-    border: 2px solid #ccc;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgba(128, 128, 128, .8);
-    width: 100%;
-    margin: 20px; /* pour mettre un écart avec l'élément suivant */
-    text-align: center;
+  border: 2px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(128, 128, 128, 0.8);
+  width: 100%;
+  margin: 20px; /* pour mettre un écart avec l'élément suivant */
+  text-align: center;
 }
 
-
-form input[type=text], form input[type=password], form input[type=email] ,select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; /* Pour permettre à notre élément de tenir dans son conteneur */
+form input[type="text"],
+form input[type="password"],
+form input[type="email"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box; /* Pour permettre à notre élément de tenir dans son conteneur */
 }
 
 form label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
+  padding: 12px 12px 12px 0;
+  display: inline-block;
 }
 
 textarea {
-    width: 100%;
-    background-color: #fff;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1.2em;
+  width: 100%;
+  background-color: #fff;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1.2em;
 }
 
 textarea:hover {
-    width: 100%;
-    background-color: lightblue;
-    color: #000;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  width: 100%;
+  background-color: lightblue;
+  color: #000;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 /* Spécialement utilisé dans le formulaire de la méthode 3 */
 fieldset {
-    margin: 10px;
-    padding: 5px;
-    border: 2px inset #2E64FE;
-    border-radius: 10px;
-    font-size: 1em;
+  margin: 10px;
+  padding: 5px;
+  border: 2px inset #2e64fe;
+  border-radius: 10px;
+  font-size: 1em;
 }
-
 
 #forml {
-    color: #000;
-    text-align: center;
-    text-transform: capitalize;
-    font-weight: bold;
+  color: #000;
+  text-align: center;
+  text-transform: capitalize;
+  font-weight: bold;
 }
 
-
-input[type=submit], input[type=reset] {
-    width: 30%;
-    border-radius: 12px;
-    padding: 12px 20px;
-    background-color: lightblue;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    margin: 30px 10px 0px 10px;
+input[type="submit"],
+input[type="reset"] {
+  width: 30%;
+  border-radius: 12px;
+  padding: 12px 20px;
+  background-color: lightblue;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  margin: 30px 10px 0px 10px;
 }
 
-input[type=submit]:hover, input[type=reset]:hover {
-    background-color: #fff;
-    color: lightblue;
-    cursor: pointer;
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+  background-color: #fff;
+  color: lightblue;
+  cursor: pointer;
 }
 
 /**********************/
 /* Gestion de l'aside */
 /*********************/
-aside .bye{
-	position: relative;
-    max-width: 900px;
-    width: 90%;
-    top: 2vh;
-    background-color: aqua;
-    border-bottom: 2px double red;
-    border-radius: 10px;
-    padding: 100px;
-    justify-content: space-between;
-    align-items: center;
-	margin: 0 auto;
+aside .bye {
+  position: relative;
+  max-width: 900px;
+  width: 90%;
+  top: 2vh;
+  background-color: aqua;
+  border-bottom: 2px double red;
+  border-radius: 10px;
+  padding: 100px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .bye {
-    position: absolute; /*Pour le centrer */
-    top: 40%;
-    transform: translate(-5%, -5%);
-    margin: 0px; /*on l'enlève le margin*/
-    padding: 0 0 150px;
-    display: flex;
+  position: absolute; /*Pour le centrer */
+  top: 40%;
+  transform: translate(-5%, -5%);
+  margin: 0px; /*on l'enlève le margin*/
+  padding: 0 0 150px;
+  display: flex;
 }
 
 .bye li {
-    list-style: none;
-    color: black;
-    font-family: Arial;
-    font-size: 40px;
-    animation: flash 1.4s linear infinite ;
-    margin-top: 150px;
+  list-style: none;
+  color: black;
+  font-family: Arial;
+  font-size: 40px;
+  animation: flash 1.4s linear infinite;
+  margin-top: 150px;
 }
 
 @keyframes flash {
-    0%{
-        color: beige;
-        text-shadow: none;
-    }
-    98%{
-        color: beige;
-        text-shadow: none;
-    }
-    100%{
-        color: blue;
-        text-shadow: 0 0 7px blue, 0 0 50px #ff6c00;
-    }
+  0% {
+    color: beige;
+    text-shadow: none;
+  }
+  98% {
+    color: beige;
+    text-shadow: none;
+  }
+  100% {
+    color: blue;
+    text-shadow: 0 0 7px blue, 0 0 50px #ff6c00;
+  }
 }
 
 ul li:nth-child(1) {
-    animation-delay: .1s;
+  animation-delay: 0.1s;
 }
 ul li:nth-child(2) {
-    animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 ul li:nth-child(3) {
-    animation-delay: .3s;
+  animation-delay: 0.3s;
 }
 ul li:nth-child(4) {
-    animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 ul li:nth-child(5) {
-    animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 ul li:nth-child(6) {
-    animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 ul li:nth-child(7) {
-    animation-delay: .7s;
+  animation-delay: 0.7s;
 }
 ul li:nth-child(8) {
-    animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 ul li:nth-child(9) {
-    animation-delay: .9s;
+  animation-delay: 0.9s;
 }
 ul li:nth-child(10) {
-    animation-delay: 1s;
+  animation-delay: 1s;
 }
 ul li:nth-child(11) {
-    animation-delay: 1.1s;
+  animation-delay: 1.1s;
 }
 ul li:nth-child(12) {
-    animation-delay: 1.2s;
+  animation-delay: 1.2s;
 }
 ul li:nth-child(13) {
-    animation-delay: 1.3s;
+  animation-delay: 1.3s;
 }
 ul li:nth-child(14) {
-    animation-delay: 1.4s;
+  animation-delay: 1.4s;
 }
 ul li:nth-child(15) {
-    animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 ul li:nth-child(16) {
-    animation-delay: 1.6s;
+  animation-delay: 1.6s;
 }
 ul li:nth-child(17) {
-    animation-delay: 1.7s;
+  animation-delay: 1.7s;
 }
-
-
-
 
 /*******************************************/
 /* Section de gestion des medias queries */
 /*****************************************/
 /* Règles CSS pour les écrans inférieurs à 576px */
 @media (max-width: 576px) {
-    #myListe{
-        display: none;
-    }
+  #myListe {
+    display: none;
+  }
 
-    header nav label{
-        display: block;
-        box-sizing: border-box;
-    }
-    header nav label:hover{
-        cursor: pointer;
-    }
-    /* Si myBurger coché: on active le mode FLEX */
-    #myBurger[type=checkbox]:checked ~ #myListe{
-        display: block;
-        /*background-color: red;*/
-        width: 100%;
-        height: 17vh;
-        margin: 0 1em 1em 0;
-        position: relative;
-        /*left: 60vw;*/
-        top: 26vh;
-    }
+  header nav label {
+    display: block;
+    box-sizing: border-box;
+  }
+  header nav label:hover {
+    cursor: pointer;
+  }
+  /* Si myBurger coché: on active le mode FLEX */
+  #myBurger[type="checkbox"]:checked ~ #myListe {
+    display: block;
+    /*background-color: red;*/
+    width: 100%;
+    height: 17vh;
+    margin: 0 1em 1em 0;
+    position: relative;
+    /*left: 60vw;*/
+    top: 26vh;
+  }
 }
 
 /* Règles CSS pour les écrans inférieurs à 768px */
 @media (max-width: 768px) {
-
 }
 
 /* Règles CSS pour les écrans inférieurs à 992px */
-@media (max-width: 992px){
+@media (max-width: 992px) {
+  #myListe {
+    display: none;
+  }
 
-    #myListe{
-        display: none;
-    }
+  header nav label {
+    display: block;
+    box-sizing: border-box;
+  }
+  header nav label:hover {
+    cursor: pointer;
+  }
+  /* Si myBurger coché: on active le mode FLEX */
+  #myBurger[type="checkbox"]:checked ~ #myListe {
+    display: block;
+    /*background-color: cadetblue;*/
+    width: 85%;
+    height: 17vh;
+    margin: 0 1em 1em 0;
+    position: relative;
+    /*left: 60vw;*/
+    top: 6vh;
+  }
 
-    header nav label{
-        display: block;
-        box-sizing: border-box;
-    }
-    header nav label:hover{
-        cursor: pointer;
-    }
-    /* Si myBurger coché: on active le mode FLEX */
-    #myBurger[type=checkbox]:checked ~ #myListe{
-        display: block;
-        /*background-color: cadetblue;*/
-        width: 85%;
-        height: 17vh;
-        margin: 0 1em 1em 0;
-        position: relative;
-        /*left: 60vw;*/
-        top: 6vh;
-    }
-
-    /* Si myBurger coché: Les items du menu principal */
-    /* sont centrés en mode FLEX */
-    /*#myListe li{
+  /* Si myBurger coché: Les items du menu principal */
+  /* sont centrés en mode FLEX */
+  /*#myListe li{
         flex-direction: column;
         text-align: center;
         /*margin: 1.6em 0 1.2em 0;*/
-        /*border-bottom: 1px solid whitesmoke;*/
-    }
-    /*#myListe li a{
+  /*border-bottom: 1px solid whitesmoke;*/
+  /*}*/
+  /*#myListe li a{
         width: 10em;
         margin: 0 0 1em 0;
     }
@@ -289,10 +284,8 @@ ul li:nth-child(17) {
         background-color: whitesmoke;
         color: cadetblue;
     }*/
-
 }
 
 /* Règles CSS pour les écrans inférieurs à 1200px */
 @media (max-width: 1200px) {
-
 }
